--- a/index.html
+++ b/index.html
@@ -4,130 +4,176 @@
 <meta charset="UTF-8">
 <title>Ask Jetrom</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="theme-color" content="#4285f4">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github-dark-dimmed.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+<link rel="manifest" href="/manifest.json">
 <style>
+#install-modal {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1000;
+  background-color: #fff;
+  padding: 15px 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+  display: none;
+  align-items: center;
+  gap: 15px;
+}
+#install-modal p {
+  margin: 0;
+  font-size: 1rem;
+  color: #333;
+}
+#install-modal button {
+  border: none;
+  padding: 8px 12px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+#install-btn {
+  background-color: #4285f4;
+  color: white;
+}
+#close-modal-btn {
+  background-color: #eee;
+  color: #333;
+}
 :root {
 --primary-color: #4285f4;
 --secondary-color: #34a853;
 --accent-color: #ea4335;
 --light-bg: #f8f9fa;
 --dark-text: #202124;
+--card-bg: #ffffff;
+--border-color: #e0e0e0;
 }
 
 body {
 background-color: var(--light-bg);
+background-image: radial-gradient(circle at 1% 1%, rgba(66, 133, 244, 0.05), rgba(255, 255, 255, 0) 25%);
 font-family: 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
 color: var(--dark-text);
 line-height: 1.6;
-padding-bottom: 60px;
+padding-bottom: 80px;
 }
 
 .card {
-border: none;
-border-radius: 12px;
-overflow: hidden;
+background-color: var(--card-bg);
+border: 1px solid var(--border-color);
+border-radius: 16px;
+box-shadow: 0 8px 32px rgba(0, 0, 0, 0.07);
 transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .card:hover {
 transform: translateY(-5px);
-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+box-shadow: 0 12px 40px rgba(0, 0, 0, 0.1);
 }
 
 .card-title {
-color: var(--primary-color);
+color: var(--dark-text);
 font-weight: 700;
 position: relative;
 padding-bottom: 10px;
 }
 
-.card-title:after {
+.card-title::after {
 content: '';
 position: absolute;
 bottom: 0;
 left: 50%;
 transform: translateX(-50%);
-width: 60px;
-height: 3px;
+width: 50px;
+height: 4px;
+border-radius: 2px;
 background: linear-gradient(90deg, var(--primary-color), var(--secondary-color));
 }
 
 .btn-primary {
-background-color: var(--primary-color);
+background: linear-gradient(90deg, var(--primary-color), #3367d6);
 border: none;
 padding: 12px;
 font-weight: 600;
 letter-spacing: 0.5px;
 transition: all 0.3s ease;
+background-size: 200% 100%;
 }
 
 .btn-primary:hover {
-background-color: #3367d6;
+background-position: right center;
 transform: translateY(-2px);
-box-shadow: 0 4px 8px rgba(66, 133, 244, 0.3);
+box-shadow: 0 4px 15px rgba(66, 133, 244, 0.3);
 }
 
 #resposta {
-background-color: white;
-border: 1px solid #e0e0e0 !important;
+background-color: var(--card-bg);
+border: 1px solid var(--border-color) !important;
+border-radius: 8px;
 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 white-space: pre-wrap;
 transition: all 0.3s ease;
 min-height: 150px;
+padding: 1rem;
 }
 
-#resposta:empty:not(:focus):before {
+#resposta:empty:not(:focus)::before {
 content: "A resposta demora cerca de 10 segundos ou menos!";
 color: #999;
+padding: 1rem;
+display: block;
+margin: -1rem;
 }
 
 #resposta.markdown-rendered {
 white-space: normal;
-padding: 1rem;
 }
 
-/* Estilos para blocos de código */
 pre {
 position: relative;
-background-color: #f6f8fa !important;
-border-radius: 6px !important;
+background-color: #22272e !important;
+border-radius: 8px !important;
 padding: 16px !important;
 overflow: auto !important;
+font-size: 0.9em;
 }
 
 .copy-btn {
 position: absolute;
-top: 8px;
-right: 8px;
-background-color: rgba(255, 255, 255, 0.8);
-border: 1px solid #d1d5da;
-border-radius: 4px;
-padding: 4px 8px;
+top: 12px;
+right: 12px;
+background-color: rgba(255, 255, 255, 0.1);
+color: #fff;
+border: 1px solid rgba(255, 255, 255, 0.2);
+border-radius: 6px;
+padding: 5px 10px;
 font-size: 12px;
 cursor: pointer;
 display: flex;
 align-items: center;
-gap: 4px;
+gap: 6px;
 transition: all 0.2s ease;
 z-index: 10;
 }
 
 .copy-btn:hover {
-background-color: white;
-border-color: #959da5;
+background-color: rgba(255, 255, 255, 0.2);
+border-color: rgba(255, 255, 255, 0.3);
 }
 
 .copy-btn.copied {
-background-color: #e6ffed;
-border-color: #34d058;
-color: #22863a;
+background-color: var(--secondary-color);
+border-color: var(--secondary-color);
+color: #fff;
 }
 
-#resposta.markdown-rendered code:not(pre code) {
+#resposta code:not(pre code) {
 font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, monospace;
 background-color: rgba(175, 184, 193, 0.2);
 border-radius: 3px;
@@ -135,7 +181,7 @@ padding: 0.2em 0.4em;
 font-size: 85%;
 }
 
-#resposta.markdown-rendered blockquote {
+#resposta blockquote {
 border-left: 4px solid #dfe2e5;
 color: #6a737d;
 padding: 0 1em;
@@ -152,7 +198,7 @@ position: relative;
 color: transparent;
 }
 
-.loading:after {
+.loading::after {
 content: '';
 position: absolute;
 top: 50%;
@@ -182,51 +228,37 @@ background-color: var(--light-bg);
 border-top: 1px solid #dee2e6;
 }
 
-/* Responsividade */
 @media (max-width: 768px) {
-.container {
-padding-top: 5px;
-padding-bottom: 5px;
-}
-
-.card {
-border-radius: 8px;
-}
-
-.card-body {
-padding: 1.25rem;
-}
-
-.btn-primary {
-padding: 10px;
-}
-
-#resposta {
-min-height: 120px;
-}
+body { padding-bottom: 70px; }
+.container { padding-top: 1rem; padding-bottom: 1rem; }
+.card { border-radius: 12px; }
+.card-body { padding: 1.25rem; }
+.btn-primary { padding: 10px; }
+#resposta { min-height: 120px; }
 }
 </style>
 </head>
-<body class="bg-light">
+<body>
 
 <div class="container py-4 py-md-5">
 <div class="row justify-content-center">
 <div class="col-12 col-md-10 col-lg-8">
-<div class="card shadow">
-<div class="card-body p-3 p-md-4">
-<h1 class="card-title text-center mb-3 mb-md-4">Jetrom</h1>
+<div class="card">
+<div class="card-body p-4 p-md-5">
+<h1 class="card-title text-center mb-4">Jetrom</h1>
 
-<div class="mb-3 mb-md-4">
+<div class="mb-4">
 <label for="prompt" class="form-label fw-semibold">Prompt:</label>
 <input type="text" class="form-control py-2" id="prompt" placeholder="Digite algo..." autofocus>
 </div>
 
-<button onclick="gerarTexto()" class="btn btn-primary w-100 mb-3 mb-md-4 py-2">
-<i class="bi bi-robot"></i> Ask </button>
+<button onclick="gerarTexto()" class="btn btn-primary w-100 mb-4 py-2">
+<i class="bi bi-robot"></i> Ask
+</button>
 
 <div class="mt-3">
 <label class="form-label fw-semibold">Resposta:</label>
-<div id="resposta" class="bg-white border rounded"></div>
+<div id="resposta" class="bg-white"></div>
 </div>
 </div>
 </div>
@@ -240,44 +272,50 @@ min-height: 120px;
 </div>
 </footer>
 
+<div id="install-modal">
+  <p>Instale o Ask Jetrom para acesso fácil!</p>
+  <button id="install-btn">Instalar</button>
+  <button id="close-modal-btn">Agora não</button>
+</div>
+
 <script>
-// Configuração do Marked.js para renderização de Markdown
 marked.setOptions({
 breaks: true,
 gfm: true,
 highlight: function(code, lang) {
-if (hljs.getLanguage(lang)) {
-return hljs.highlight(lang, code).value;
-}
-return hljs.highlightAuto(code).value;
+const language = hljs.getLanguage(lang) ? lang : 'plaintext';
+return hljs.highlight(code, { language }).value;
 }
 });
 
-// Função para adicionar botões de copiar aos blocos de código
 function addCopyButtons() {
 const codeBlocks = document.querySelectorAll('#resposta pre');
+codeBlocks.forEach((preElement) => {
+if (preElement.querySelector('.copy-btn')) return;
 
-codeBlocks.forEach((block) => {
-// Verifica se já tem botão de copiar
-if (block.querySelector('.copy-btn')) return;
+const codeElement = preElement.querySelector('code');
+if (!codeElement) return;
 
 const copyBtn = document.createElement('button');
 copyBtn.className = 'copy-btn';
 copyBtn.innerHTML = '<i class="bi bi-clipboard"></i> Copiar';
 
 copyBtn.addEventListener('click', () => {
-const code = block.textContent;
-// Usando document.execCommand('copy') para maior compatibilidade em iframes
-document.execCommand('copy'); 
+const codeToCopy = codeElement.innerText;
+navigator.clipboard.writeText(codeToCopy).then(() => {
 copyBtn.innerHTML = '<i class="bi bi-check2"></i> Copiado!';
 copyBtn.classList.add('copied');
 setTimeout(() => {
 copyBtn.innerHTML = '<i class="bi bi-clipboard"></i> Copiar';
 copyBtn.classList.remove('copied');
 }, 2000);
+}).catch(err => {
+console.error('Falha ao copiar texto: ', err);
+copyBtn.innerHTML = 'Erro';
+});
 });
 
-block.appendChild(copyBtn);
+preElement.appendChild(copyBtn);
 });
 }
 
@@ -290,119 +328,116 @@ resposta.textContent = "Por favor, digite um prompt válido.";
 return;
 }
 
-// Mostrar estado de carregamento
 resposta.innerHTML = "";
 resposta.classList.add("loading");
+resposta.classList.remove("markdown-rendered");
 
 try {
-    // URL do seu backend Flask no Vercel
-    const apiUrl = "https://ask-jetrom.vercel.app/generate"; 
-    console.log("Tentando buscar da URL:", apiUrl); // Log para depuração
+const apiUrl = "https://ask-jetrom.vercel.app/generate";
+const res = await fetch(apiUrl, {
+method: "POST",
+headers: { "Content-Type": "application/json" },
+body: JSON.stringify({ prompt })
+});
 
-    const res = await fetch(apiUrl, {
-        method: "POST",
-        headers: {
-            "Content-Type": "application/json"
-        },
-        body: JSON.stringify({ prompt })
-    });
+const responseText = await res.text();
+if (!res.ok) {
+let errorMsg = `Erro ${res.status}: ${res.statusText}`;
+try {
+const errorJson = JSON.parse(responseText);
+errorMsg = errorJson.error || errorJson.message || responseText;
+} catch (e) {
+errorMsg = responseText || errorMsg;
+}
 
-    let result;
-    let responseText = ""; 
+if (res.status === 429) {
+errorMsg = "Limite de requisições excedido. Por favor, tente novamente mais tarde.";
+} else if (res.status === 401) {
+    errorMsg = "Erro de autenticação. Verifique a API Key.";
+}
 
-    try {
-        responseText = await res.text(); // Sempre tenta ler como texto primeiro
+throw new Error(errorMsg);
+}
 
-        // Verifica se a resposta é vazia ou contém apenas espaços em branco
-        if (responseText.trim() === "") {
-            throw new Error(`A resposta do servidor está vazia ou incompleta. Status: ${res.status}`);
-        }
+let result;
+try {
+result = JSON.parse(responseText);
+} catch (e) {
+throw new Error("Resposta inválida do servidor. Esperava um JSON.");
+}
 
-        // Tenta fazer o parse como JSON
-        result = JSON.parse(responseText);
+const text = result.generated_text || "Não foi possível obter uma resposta.";
 
-    } catch (jsonParseError) {
-        // Se o parse JSON falhar, pode ser uma resposta não-JSON (como a do Flask-Limiter para 429)
-        if (jsonParseError instanceof SyntaxError) {
-            if (res.status === 429) {
-                throw new Error("Limite de requisições excedido. Por favor, tente novamente mais tarde.");
-            } else {
-                throw new Error(`Erro ao analisar a resposta do servidor como JSON: ${jsonParseError.message}. Resposta recebida (parcial): "${responseText.substring(0, 200)}..."`);
-            }
-        } else {
-            // Outros erros inesperados durante o processamento da resposta
-            throw new Error(`Erro inesperado ao processar a resposta do servidor: ${jsonParseError.message}`);
-        }
-    }
+resposta.innerHTML = marked.parse(text);
+resposta.classList.add("markdown-rendered");
 
-    if (!res.ok) {
-        // Trata erros HTTP (ex: 400, 403, 500)
-        let errorMessage = "Ocorreu um erro inesperado ao se comunicar com o servidor.";
-        if (res.status === 401) {
-            errorMessage = "Erro de autenticação (401). Verifique a configuração da API Key no seu backend.";
-        } else if (res.status === 429) {
-            errorMessage = "Limite de requisições excedido. Por favor, tente novamente mais tarde.";
-        } else if (result && result.error) {
-            errorMessage = result.error; // Se o backend retornar um JSON com 'error'
-        } else {
-            // Se o resultado não estiver disponível ou não tiver mensagem de erro, usa o texto bruto da resposta
-            errorMessage = `Erro ${res.status}: ${responseText || "Resposta não JSON ou erro desconhecido."}`;
-        }
-        throw new Error(errorMessage);
-    }
+document.querySelectorAll('#resposta pre code').forEach((block) => {
+hljs.highlightElement(block);
+});
 
-    let text = "Sem resposta.";
-    if (result.generated_text) { // O backend Flask retorna 'generated_text'
-        text = result.generated_text;
-    } else {
-        console.warn("Estrutura de resposta inesperada do backend:", result);
-        text = "Não foi possível extrair a resposta do modelo. Resposta completa: " + JSON.stringify(result);
-    }
+addCopyButtons();
 
-    // Verifica se o texto contém markdown e renderiza-o.
-    if (text.includes('`') || text.includes('```') || text.includes('*') || text.includes('#')) {
-        resposta.classList.add("markdown-rendered");
-        resposta.innerHTML = marked.parse(text);
-
-        // Aplica realce de sintaxe em todos os blocos de código
-        document.querySelectorAll('pre code').forEach((block) => {
-            hljs.highlightElement(block);
-        });
-
-        // Adiciona botões de copiar
-        addCopyButtons();
-    } else {
-        resposta.classList.remove("markdown-rendered");
-        resposta.textContent = text;
-    }
 } catch (err) {
-    resposta.classList.remove("markdown-rendered");
-    let displayMessage = "Erro: " + err.message;
+let displayMessage = "Erro: " + err.message;
 
-    // Mensagem mais amigável para "Failed to fetch"
 if (err instanceof TypeError && (err.message === 'Failed to fetch' || err.message.includes('NetworkError'))) {
-    displayMessage = "Suas consultas, chegaram ao fim. Tente novamente após 1 hora.";
-} else if (err instanceof TypeError) {
-    displayMessage = "Erro de rede: " + err.message;
+displayMessage = "Suas consultas chegaram ao fim. Tente novamente após 1 hora.";
 }
-
-    resposta.textContent = displayMessage;
-    console.error("Erro na requisição:", err); // Log o objeto de erro completo para depuração
+resposta.textContent = displayMessage;
+resposta.classList.remove("markdown-rendered");
+console.error("Erro na requisição:", err);
 } finally {
-    resposta.classList.remove("loading");
+resposta.classList.remove("loading");
 }
 }
 
-// Permite enviar o prompt com a tecla Enter.
 document.getElementById("prompt").addEventListener("keypress", function(event) {
 if (event.key === "Enter") {
 event.preventDefault();
-gerarTexto();
+document.querySelector(".btn-primary").click();
 }
 });
 
-// Atualiza o ano atual no rodapé da página.
 document.getElementById('current-year').textContent = new Date().getFullYear();
+
+if ('serviceWorker' in navigator) {
+  let deferredPrompt;
+  const installModal = document.getElementById('install-modal');
+  const installBtn = document.getElementById('install-btn');
+  const closeModalBtn = document.getElementById('close-modal-btn');
+
+  window.addEventListener('beforeinstallprompt', (e) => {
+    e.preventDefault();
+    deferredPrompt = e;
+    if (!window.matchMedia('(display-mode: standalone)').matches) {
+      installModal.style.display = 'flex';
+    }
+  });
+
+  installBtn.addEventListener('click', async () => {
+    if (deferredPrompt) {
+      deferredPrompt.prompt();
+      const { outcome } = await deferredPrompt.userChoice;
+      if (outcome === 'accepted') {
+        console.log('User accepted the install prompt');
+      }
+      deferredPrompt = null;
+    }
+    installModal.style.display = 'none';
+  });
+
+  closeModalBtn.addEventListener('click', () => {
+    installModal.style.display = 'none';
+  });
+
+  navigator.serviceWorker.register('/sw.js')
+    .then(registration => console.log('Service Worker registered with scope:', registration.scope))
+    .catch(error => console.error('Service Worker registration failed:', error));
+
+    window.addEventListener('appinstalled', () => {
+        installModal.style.display = 'none';
+    });
+}
 </script>
 
 </body>
