--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github-dark-dimmed.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="/ask-jetrom-ui/manifest.json">
 <style>
 #install-modal {
   position: fixed;
